<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_NewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin_default"
            android:layout_marginBottom="@dimen/half_margin_default"
            android:text="@string/txt_NewsInfo"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintBottom_toTopOf="@+id/txt_tags"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_Image" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/cd_FavoriteDescription"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ab_ViewMore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ab_ViewMore"
            app:srcCompat="@drawable/ic_favorites" />

        <TextView
            android:id="@+id/txt_fast_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginBottom="@dimen/half_margin_default"
            android:text="@string/supporting_text"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/ab_ViewMore"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ab_ViewMore"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:text="@string/ab_ViewMore"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginBottom="@dimen/half_margin_default"
            android:text="@string/txt_tags"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/txt_fast_resume"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/iv_Image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/cd_NewsImage"
            android:scaleType="centerCrop"
            android:src="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/cd_ShareDescription"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ab_ViewMore"
            app:layout_constraintEnd_toStartOf="@+id/iv_favorite"
            app:layout_constraintTop_toTopOf="@+id/ab_ViewMore"
            app:srcCompat="@drawable/ic_baseline_share_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
